--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
-    background-color: #2f2f2f;
+    background-color: #2C003E;
     display: grid;
     place-content: center;
     align-items: center;
